--- a/blackjack.html
+++ b/blackjack.html
@@ -181,8 +181,8 @@
   </main>
 <footer>
   <div style="flex: 1; text-align: left;">
-    <a href="terms.html" style="color: #4ea1d3; text-decoration: none;">
-      Terms of Service & Privacy Policy
+    <a href="games.html" style="color: #4ea1d3; text-decoration: none;">
+      Games
     </a>
   </div>
   <div style="flex: 1; text-align: center;">
