--- a/terms.html
+++ b/terms.html
@@ -44,6 +44,18 @@
       padding: 0 20px;
       text-align: center;
     }
+    main a 
+    {
+      color: #4ea1d3;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    main a:hover 
+    {
+      text-decoration: underline;
+      color: #181830;
+    }
     nav 
     {
       position: fixed;
