--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
       box-sizing: border-box;
       font-weight: bold;
     }
-    .popup-overlay {
+
+    .popup-overlay  
+    {
       display: none;                 
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
@@ -100,8 +102,8 @@
       align-items: center;
       padding: 1rem;
     }
-
-    .popup-content {
+    .popup-content 
+    {
       background: #fff;
       color: #111;
       padding: 1rem;
@@ -111,13 +113,13 @@
       position: relative;
       box-shadow: 0 10px 40px rgba(0,0,0,0.5);
     }
-
-    .popup-content h2 {
+    .popup-content h2 
+    {
       margin-top: 0;
       font-size: 1.2rem;
     }
-
-    .popup-close {
+    .popup-close 
+    {
       position: absolute;
       top: 8px;
       right: 12px;
@@ -127,13 +129,22 @@
       cursor: pointer;
       color: #444;
     }
-
-    .popup-content iframe {
+    .popup-content iframe 
+    {
       width: 100%;
       height: 520px;
       border: none;
     }
-    iframe {
+    .links
+    {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.5em;
+    }
+
+    iframe 
+    {
       width: 100%;
       height: 400px;
       border: none;
@@ -147,11 +158,13 @@
   <main>
     <h1>Welcome to Chippy</h1>
     <p>
-      Best games, Best community <3 <br><br>
+      Best games, Best community <3
        
-      <a href="https://discord.com/oauth2/authorize?client_id=1373621336982949992">Add Chippy</a> <a href="https://github.com/LazyGran/gambling">Github repository</a>
-
-      <br><br>
+      <p class="links">
+        <a href="https://discord.com/oauth2/authorize?client_id=1373621336982949992">Add Chippy</a> 
+        <a href="games.html">Play Games</a> 
+        <a href="https://github.com/LazyGran/gambling">Github Repository</a>
+      </p>
 
       <a href="#" onclick="openKofiPopup(); return false;">
         <img src="https://ko-fi.com/img/githubbutton_sm.svg" alt="Donate with Ko-fi" />
