--- a/blackjack.html
+++ b/blackjack.html
@@ -202,6 +202,7 @@
   var points        = 0
   var dealer_hand   = []
   var dealer_points = 0
+  var dealer_turn   = 1
   var hit_enabled   = true
   var stand_enabled = true
   var busted        = false
@@ -209,6 +210,8 @@
   const state = document.getElementById("state");
   const hp    = document.getElementById("h_p");
   const dp    = document.getElementById("d_p");
+
+  let dealer_first;
 
   const cards =
   {
@@ -287,8 +290,6 @@
 
   async function player_draw(hand, points)
   {
-    console.log(deck.length)
-
     const card = Math.floor(Math.random() * (deck.length - 1))
 
     add("hand", deck[card])
@@ -334,8 +335,8 @@
       aces --
     }
 
-    if(who === "player")  hp.innerHTML = `Your hand <span style="color: grey">(${total})</span>`
-    else                  dp.innerHTML = `Dealer's hand <span style="color: grey">(${total})</span>`
+    if(who === "player")                                  hp.innerHTML = `Your hand <span style="color: grey">(${total})</span>`
+    else if(who === "dealer" && stand_enabled === false)  dp.innerHTML = `Dealer's hand <span style="color: grey">(${total})</span>`
  
     return total
   }
@@ -345,7 +346,16 @@
     const container = document.getElementById(cID)
     const image     = document.createElement("img")
 
-    image.src       = `cards/${name}.png`
+    if(dealer_turn === 1 && cID === "dealer_hand")  
+    {
+      dealer_first = `cards/${name}.png`
+
+      image.src = `cards/secret.png`
+
+      dealer_turn++
+    }
+    else  image.src = `cards/${name}.png`;
+
     image.className = "card"
 
     container.appendChild(image)
@@ -361,6 +371,8 @@
     if(stand_enabled)
     {
       stand_enabled = false 
+
+      dealer_end(dealer_hand)
 
       while(dealer_points < 17)
       {
@@ -421,13 +433,12 @@
     points        = 0
     dealer_hand   = []
     dealer_points = 0
+    dealer_turn   = 1
     hit_enabled   = true
     stand_enabled = true
     busted        = false
 
     deck = [ "Aceh", "Aces", "Aced", "Acec", "2h", "2s", "2d", "2c", "3h", "3s", "3d", "3c", "4h", "4s", "4d", "4c", "5h", "5s", "5d", "5c", "6h", "6s", "6d", "6c", "7h", "7s", "7d", "7c", "8h", "8s", "8d", "8c", "9h", "9s", "9d", "9c", "10h", "10s", "10d", "10c", "Jackh", "Jacks", "Jackd", "Jackc", "Queenh", "Queens", "Queend", "Queenc", "Kingh", "Kings", "Kingd", "Kingc" ]
-
-    console.log("Restarted:", deck.length)
 
     const dealer = document.getElementById("dealer_hand")
     const player = document.getElementById("hand")
@@ -463,8 +474,26 @@
       document.getElementById("b_hit").style.display      = "inline-block"
       document.getElementById("b_stand").style.display    = "inline-block"
 
+      hp.innerHTML = `Your hand`
+      dp.innerHTML = `Dealer's hand`
+
       initial()
     }, 500)
+  }
+
+  function dealer_end(dealer_hand)
+  {
+    calculate(dealer_hand, "dealer")
+
+    const container = document.getElementById("dealer_hand")
+    const image     = document.createElement("img")
+
+    image.src       = dealer_first
+    image.className = "card"
+
+    image.classList.add("show")
+
+    container.replaceChild(image, container.firstChild);
   }
 </script>
 </body>
