Basic gameplay logic for High or Low

--- a/games.html
+++ b/games.html
@@ -217,7 +217,7 @@
   })
   document.getElementById("horl").addEventListener("click", () =>
   {
-    alert("Coming Soon")
+    window.location.href = "horl.html"
   })
   document.getElementById("pokr").addEventListener("click", () =>
   {
