Changed footer texts

--- a/horl.html
+++ b/horl.html
@@ -202,7 +202,7 @@
     </a>
   </div>
   <div style="flex: 1; text-align: right; font-style: italic;">
-    The House always wins... eventually.
+    Prediction isn't always easy..
   </div> 
 </footer>
 <script>
