--- a/blackjack.html
+++ b/blackjack.html
@@ -197,7 +197,7 @@
     </a>
   </div>
   <div style="flex: 1; text-align: right; font-style: italic;">
-    The House always wins... eventually.
+    Always hit on 17!
   </div> 
 </footer>
 <script>
