--- a/games.html
+++ b/games.html
@@ -207,7 +207,7 @@
     </a>
   </div>
   <div style="flex: 1; text-align: right; font-style: italic;">
-    The House always wins... eventually.
+    Not rigged! Probably..
   </div> 
 </footer>
 <script>
