--- a/terms.html
+++ b/terms.html
@@ -149,7 +149,7 @@
     </a>
   </div>
   <div style="flex: 1; text-align: right; font-style: italic;">
-    Not rigged! Probably...
+    Important? Nah!
   </div>
 </footer>
 </body>
