Very early structure for poker

--- a/games.html
+++ b/games.html
@@ -221,7 +221,7 @@
   })
   document.getElementById("pokr").addEventListener("click", () =>
   {
-    alert("Coming Soon")
+    window.location.href = "poker.html"
   })
 </script>
 </body>
