--- a/horl.html
+++ b/horl.html
@@ -310,7 +310,7 @@
 
   function restart()
   {
-    if(restart_enabled === false) return;
+    if(!restart_enabled) return;
 
     final           = 0
     buttons_enabled = true
