--- a/poker.html
+++ b/poker.html
@@ -361,9 +361,32 @@
     document.getElementById("b_call").style.display     = "none"
     document.getElementById("b_fold").style.display     = "none"
 
-    window.scrollTo(0, document.body.scrollHeight);
+    const player_cards = [...hand, ...community_hand]
+    const dealer_cards = [...dealer_hand, ...community_hand]
 
-    calculate()
+    const final = await wincon(player_cards, dealer_cards)
+
+    hp.innerHTML = `Your hand <span style="color: grey">(${final.hands[0]})</span>`
+    dp.innerHTML = `Dealer's hand <span style="color: grey">(${final.hands[1]})</span>`
+
+    if(final.won === 0)
+    {
+      state.innerHTML = `<span style="color: red">Lose!</span> Dealer's hand is stronger`
+    }
+    if(final.won === 1)
+    {
+      state.innerHTML = `<span style="color: green">Win!</span> Your hand is stronger`
+    }
+    if(final.won === 2)
+    {
+      state.innerHTML = `<span style="color: orange">Tie!</span> That's a rare one`
+    }
+    if(final.won === 3)
+    {
+      state.innerHTML = `<span style="color: green">Win!</span> Dealer didn't qualify`
+    }
+
+    window.scrollTo(0, document.body.scrollHeight);
   }
 
   async function fold()
@@ -448,6 +471,169 @@
     }, 500)
   }
 
+  async function calculate(cards)
+  { 
+    const sorted = cards.map(card =>
+    {
+      const suit  = card.slice(-1)
+      const rank  = card.slice(0, -1).toLowerCase()
+      const value = values[rank]
+
+      return { suit, rank, value }
+    })
+
+    const counts  = {}
+    const suits   = { h: [], s: [], d: [], c: [] }
+
+    for(const card of sorted) 
+    {
+      counts[card.value] = (counts[card.value] || 0) + 1
+      suits[card.suit].push(card.value)
+    }
+
+    const valuesSorted = sorted.map(c => c.value).sort((a, b) => b - a)
+    const countsSorted = Object.entries(counts).sort((a, b) => b[1] - a[1] || b[0] - a[0])
+
+    //flush
+    let fSuit = null
+
+    for(const suit in suits)
+    {
+      if(suits[suit].length >= 5)
+      {
+        fSuit = suit
+      }
+    }
+
+    //stragit + straight flush
+    const straight = (valuesSorted) =>
+    {
+      const unique = [...new Set(valuesSorted)].sort((a, b) => a - b)
+   
+      for(let i = 0; i <= unique.length - 5; i++)
+      {
+        const sequence = unique.slice(i, i + 5)
+
+        if(sequence[4] - sequence[0] === 4) return sequence[4]
+      }
+
+      if(unique.includes(14) && unique.includes(2) && unique.includes(3) && unique.includes(4) && unique.includes(5)) return 5;
+
+      return null;
+    }
+
+    let hand = "High Card", rank = 1, kickers = valuesSorted.slice(0, 5)
+
+    const sFlush = fSuit ? straight(suits[fSuit]) : null
+
+    if(sFlush) 
+    {
+      if(sFlush === 14)   return  { hand: "Royal Flush", rank: 10, kickers: [sFlush]}
+      else        return  { hand: "Straight Flush", rank: 9, kickers: [sFlush]}
+    }
+
+    if(countsSorted[0][1] === 4)
+    {
+      hand  = "Four Of A Kind"
+      rank  = 8
+      const fourKindValue = Number(countsSorted[0][0])
+      const kicker = valuesSorted.filter(v => v !== fourKindValue)[0]
+      kickers = [fourKindValue, kicker]
+    }
+    else if(countsSorted[0][1] == 3 && countsSorted[1]?.[1] >= 2)
+    {
+      hand  = "Full House"
+      rank  = 7
+      kickers = [Number(countsSorted[0][0]), Number(countsSorted[1][0])]
+    }
+    else if(fSuit)
+    {
+      hand  = "Flush"
+      rank  = 6
+      kickers = suits[fSuit].sort((a, b) => b - a).slice(0, 5)
+    }
+    else
+    {
+      const straightHigh = straight(valuesSorted)
+
+      if(straightHigh)
+      {
+        hand  = "Straight"
+        rank  = 5
+        kickers = [straightHigh]
+      }
+      else if(countsSorted[0][1] === 3)
+      {
+        hand  = "Three Of A Kind"
+        rank  = 4
+        kickers = [Number(countsSorted[0][0]), ...valuesSorted.filter(value => value !== Number(countsSorted[0][0])).slice(0, 2)];
+      }
+      else if(countsSorted[0][1] === 2 && countsSorted[1]?.[1] === 2)
+      {
+        hand  = "Two Pair"
+        rank  = 3
+        
+        const pair1 = Number(countsSorted[0][0])
+        const pair2 = Number(countsSorted[1][0])
+        kickers   = [pair1, pair2, ...valuesSorted.filter(value => value !== pair1 && value !== pair2).slice(0, 1)];
+      }
+      else if(countsSorted[0][1] === 2)
+      {
+        hand  = "Pair"
+        rank  = 2
+
+        const pairVal   = Number(countsSorted[0][0])
+        const uniqueKickers = [...new Set(valuesSorted.filter(value => value !== pairVal))]
+
+        kickers = [pairVal, ...uniqueKickers.slice(0, 3)]
+      }
+    }
+
+    return { hand, rank, kickers }
+  }
+
+  async function wincon(player_cards, dealer_cards)
+  {
+    const playerFinal = await calculate(player_cards)
+    const dealerFinal = await calculate(dealer_cards)
+
+    const qualified = qualifier(dealerFinal)
+
+    if(!qualified)
+    {
+      return { won: 3, hands: [playerFinal.hand, dealerFinal.hand] };
+    }
+
+    if(playerFinal.rank > dealerFinal.rank) return { won: 1, hands: [playerFinal.hand, dealerFinal.hand] }
+    if(playerFinal.rank < dealerFinal.rank) return { won: 0, hands: [playerFinal.hand, dealerFinal.hand] }
+
+    for(let i = 0; i < Math.min(playerFinal.kickers.length, dealerFinal.kickers.length); i++)
+    {
+      if(playerFinal.kickers[i] > dealerFinal.kickers[i]) 
+      {
+        return {won: 1, hands: [playerFinal.hand, dealerFinal.hand] }
+      }
+
+      if(playerFinal.kickers[i] < dealerFinal.kickers[i]) 
+      {
+        return { won: 0, hands: [playerFinal.hand, dealerFinal.hand] }
+      }
+    }
+
+    return { won: 2, hands: [playerFinal.hand, dealerFinal.hand] }
+  }
+
+  function qualifier(dealerFinal) 
+  {
+    if (dealerFinal.rank > 2) return true;
+
+    if (dealerFinal.hand === "Pair")
+    {
+      const pairVal = dealerFinal.kickers[0]
+      if(pairVal >= 4)  return true;
+      else          return false;
+    }
+  }
 </script>
 </body>
 </html>
